# multi-terminal

./: .gitignore  Cargo.toml  README.md  install
.githooks/: pre-commit
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-04-08-global-install.md  2026-04-08-multi-terminal.md
docs/superpowers/specs/: 2026-04-08-multi-terminal-design.md  2026-04-08-variable-panes-design.md
src/: current_terminal.rs  iterm.rs  layout.rs  lib.rs  main.rs  pty.rs  terminal_app.rs  tmux.rs
tests/: close_current_terminal_test.rs  integration_test.rs  iterm_test.rs  layout_test.rs  pty_test.rs  terminal_app_test.rs  tmux_test.rs
