[package]
name = "multi-terminal"
version = "0.1.0"
edition = "2021"

[lib]
name = "multi_terminal"
path = "src/lib.rs"

[[bin]]
name = "multi-terminal"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
which = "6"
portable-pty = "0.8"
crossterm = "0.27"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"

[dev-dependencies]
